--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,45 +3,41 @@ name: CI
 on:
   push:
   pull_request:
+  steps:
+  - name: Check out repository
+    uses: actions/checkout@v4
+  
+  - name: Set up Node.js
+    uses: actions/setup-node@v4
+    with:
+      node-version: "24"
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  - name: Install dependencies
+    working-directory: app
+    run: npm ci
 
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+  - name: Run tests if present
+    working-directory: app
+    run: npm test --if-present
 
-      # ÉTAPE DE DÉBOGAGE : Affiche l'arborescence pour vérifier les chemins
-      - name: Debug file structure
-        run: ls -R
+  - name: Build Docker image
+    run: docker build -t quote-app -f docker/Dockerfile .
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20" # Version stable recommandée (24 n'existe pas encore en LTS standard)
-
-      - name: Install dependencies
-        # Vérifiez que ce chemin existe vraiment dans votre dépôt git !
-        working-directory: labs/40-containerized-node-app/app 
-        run: npm ci
-
-      - name: Run tests if present
-        working-directory: labs/40-containerized-node-app/app
-        run: npm test --if-present
-
-      - name: Build Docker image
-        # On exécute la commande depuis la racine pour simplifier les contextes
-        run: |
-          docker build -t quote-app -f labs/40-containerized-node-app/docker/Dockerfile labs/40-containerized-node-app
-
-      - name: Run container
-        run: |
-          docker run -d --name quote-app -p 3000:3000 quote-app
-          # Attente active avec curl
-          timeout 30s bash -c 'until curl -fsS http://localhost:3000/health > /dev/null; do sleep 1; done' || (docker logs quote-app && exit 1)
+  - name: Run container
+    run: |
+      docker run -d --name quote-app -p 3000:3000 quote-app
+      for i in $(seq 1 30); do
+        if curl -fsS http://localhost:3000/health >/dev/null; then
           echo "Health check passed"
+          exit 0
+        fi
+        sleep 1
+      done
+      echo "Health check failed"
+      docker logs quote-app || true
+      exit 1
 
-      - name: Stop container
-        if: always()
-        run: docker rm -f quote-app || true
+  - name: Stop container
+    if: always()
+    run: |
+      docker rm -f quote-app || true
