--- a/labs/40-containerized-node-app/app/package.json
+++ b/labs/40-containerized-node-app/app/package.json
@@ -8,6 +8,7 @@
   "main": "server.js",
   "scripts": {
     "test": "node --test tests/*.test.js",
+    "lint": "eslint .",
     "dev": "nodemon --ext js,hbs server.js | pino-pretty",
     "start": "node server.js | pino-pretty"
   },
@@ -21,6 +22,7 @@
     "pino-pretty": "^13.1.3"
   },
   "devDependencies": {
+    "eslint": "^9.18.0",
     "nodemon": "^3.1.11"
   }
 }
