--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,11 @@ name: CI
 on:
   push:
   pull_request:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    
   steps:
   - name: Check out repository
     uses: actions/checkout@v4
