--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,15 +17,15 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        working-directory: labs/40-containerized-node-app/app
+        working-directory: app
         run: npm ci
 
-      - name: Run tests
-        working-directory: labs/40-containerized-node-app/app
+      - name: Run tests if present
+        working-directory: app
         run: npm test --if-present
 
       - name: Build Docker image
-        run: docker build -t quote-app -f labs/40-containerized-node-app/docker/Dockerfile labs/40-containerized-node-app
+        run: docker build -t quote-app -f docker/Dockerfile .
 
       - name: Run container
         run: |
