--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm test --if-present
 
       - name: Build Docker image
-        run: docker build -t quote-app -f docker/Dockerfile .
+        run: docker build -t quote-app -f docker/Dockerfile 
 
       - name: Run container
         run: |
