--- a/labs/40-containerized-node-app/app/package.json
+++ b/labs/40-containerized-node-app/app/package.json
@@ -7,8 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "node --test tests/*.test.js",
-    "lint": "eslint .",
+    "test": "echo \"No tests specified\" && exit 0",
     "dev": "nodemon --ext js,hbs server.js | pino-pretty",
     "start": "node server.js | pino-pretty"
   },
@@ -22,7 +21,6 @@
     "pino-pretty": "^13.1.3"
   },
   "devDependencies": {
-    "eslint": "^9.18.0",
     "nodemon": "^3.1.11"
   }
 }
