feat: implement production architecture and security features
Major additions:
- Kubernetes Secrets for database credentials (quote-db-secret)
- Controlled failure testing (ImagePullBackOff analysis)
- Comprehensive production architecture documentation
- Kubernetes-virtualization relationship analysis
- Multi-environment architecture designs (cloud, automotive, financial)

Documentation files:
- kubernetes-virtualization.md: K8s vs VMs, cloud provider hosting
- production-architecture.md: Multi-node setup, monitoring, CI/CD
- secrets-and-failure-testing.md: Security best practices, failure analysis

Security improvements:
- Migrated DATABASE_URL from plain text to Secret
- Documented encryption at rest vs in transit
- RBAC and secret rotation strategies

Testing:
- Introduced invalid image to test failure handling
- Captured kubectl events and describe output
- Validated rolling update protection

--- a/labs/40-containerized-node-app/docker/deployment.yaml
+++ b/labs/40-containerized-node-app/docker/deployment.yaml
@@ -19,7 +19,10 @@ spec:
             - containerPort: 3000
           env:
             - name: DATABASE_URL
-              value: "postgres://quoteuser:quotepass@postgres:5432/quotes"
+              valueFrom:
+                secretKeyRef:
+                  name: quote-db-secret
+                  key: DATABASE_URL
           resources:
             requests:
               cpu: "100m"
